--- a/includes/syllabus-base.tex
+++ b/includes/syllabus-base.tex
@@ -34,10 +34,7 @@ Linear Algebra} \\
 
 
 \section*{\fontsize{12}{15}\selectfont Course description}
-This course provides an introduction to linear algebra. Topics include systems of linear equations, matrices, Gaussian elimination, rank, linear independence, subspaces, basis, dimension, linear transformations, determinants, eigenvalues and eigenvectors, change of basis, diagonalization, the abstract concept of a vector space, and applications. Core Course.
-
-\section*{\fontsize{12}{15}\selectfont Course materials}
-The textbook is {\em Linear Algebra with Applications} by Holt, second edition.  An older first edition would also be fine, although some of the homework problem numbers have changed.
+This course provides an introduction to linear algebra. Topics include systems of linear equations, matrices, Gaussian elimination, rank, linear independence, subspaces, basis, dimension, linear transformati
 
 \section*{\fontsize{12}{15}\selectfont Learning Outcomes}
 At the completion of this course, each student should be able to...
@@ -92,7 +89,18 @@ below 80\%.
 
     \item Part of your class participation score will be determined by the {\bf peer evaluation} process.  At midterm and at final, you will fill out a Google Forms survey evaluating your peers on a scale of 1 to 5 for several questions decided by the class on the first day. Your average score score out of 5 will be mulitplied by \(25\%\) (so a 4/5 average counts as 100\%), and multiplied by a fraction between 0 and 1 based on the instructor's assessment of how fairly you completed the survey. (Any scores higher than 100\% will be counted as only 100\%.)
 
-    You will receive written feedback given by your peers on the midterm survey in an anonymized form, to help you maximize your future contributions to the team.
+    \ifbool{TR}{}{
+    These questions are: On a scale of 1 to 5, this student...
+    \begin{itemize}
+      \item ... participates in team discussions attentively.
+      \item ... demonstrates a good attitude towards team members.
+      \item ... communicates to the best of their ability with the rest of the team.
+      \item ... makes a good faith effort to contribute to team during class.
+      \item ... comes to class prepared to contribute to team Readiness Assurance Tests and Application Activities.
+    \end{itemize}
+    }
+
+    You will also receive written feedback given by your peers on the midterm survey in an anonymized form, to help you maximize your future contributions to the team.
 
     Your finalized Peer Evaluation score is given by the average of both surveys, or just the final survey, whichever is higher.
 
@@ -101,10 +109,10 @@ below 80\%.
     \begin{center}
     \begin{tabular}{l|l}
     Component & Weight \\ \hline \hline
-    iRAT & \ifbool{TR}{15\%}{TBD} \\ \hline
-    tRAT & \ifbool{TR}{25\%}{TBD}\\ \hline
-    Peer Evaluation & \ifbool{TR}{25\%}{TBD} \\ \hline
-    Attendence & \ifbool{TR}{35\%}{TBD}\\ \hline
+    iRAT & \ifbool{TR}{15\%}{15\%} \\ \hline
+    tRAT & \ifbool{TR}{25\%}{25\%}\\ \hline
+    Peer Evaluation & \ifbool{TR}{25\%}{20\%} \\ \hline
+    Attendence & \ifbool{TR}{35\%}{40\%}\\ \hline
 
     \end{tabular}
     \end{center}
