--- a/course-notes-1-E-part2.tex
+++ b/course-notes-1-E-part2.tex
@@ -1,14 +1,12 @@
 \documentclass{article}[12pt]
 
 \usepackage{course-notes}
+\usepackage{course-notes-student}
+
 \begin{document}
-
-
-
 
 \begin{module}{E}{Solving Systems of Linear Equations}
 \input{modules/1-E/day2.tex}
 \end{module}
-
 
 \end{document}
