--- a/course-notes-1-E-part3-handout.tex
+++ b/course-notes-1-E-part3-handout.tex
@@ -1,12 +1,16 @@
 \documentclass{article}[12pt]
 
 \usepackage{course-notes}
-\usepackage{course-notes-student}
+\usepackage{course-notes-handout}
 
 \begin{document}
+
+
+
 
 \begin{module}{E}{Solving Systems of Linear Equations}
 \input{modules/1-E/day3.tex}
 \end{module}
+
 
 \end{document}
