begin quiz customization for clontz

--- a/assessments/clontz/.tex
+++ b/assessments/clontz/.tex
@@ -2,16 +2,21 @@
 %% This is file, `.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/08/21,14:43
-%% From source  :  quiz9v6.tex
+%% Generated on :  2017/08/22,11:53
+%% From source  :  quiz4v1.tex
 %% Using options:  active,generate=,extract-env={problem}
 %% 
 \documentclass{sbgLAquiz}
 
 \begin{document}
 
-\begin{problem}{V2}
-Determine if ... is a linear combination of ...
+\begin{problem}{E1}
+Write an augmented matrix corresponding to the following system of linear equations.
+\begin{align*}
+x+3y-4z +w &= 5 \\
+3x+9y+z-7w &= 0 \\
+x-z +w &= 1
+\end{align*}
 \end{problem}
 
 \end{document}
