tweak redundant Epart2 activity

--- a/modules/1-E/day2.tex
+++ b/modules/1-E/day2.tex
@@ -45,7 +45,7 @@
     \end{multicols}
   \end{subactivity}
   \begin{subactivity}
-    What is the common solution to these linear systems?
+    Which linear system would you rather solve?
   \end{subactivity}
 \end{activity}
 
