add more e2 exercises

--- a/assessments/problems/E2.tex
+++ b/assessments/problems/E2.tex
@@ -14,14 +14,14 @@ $$\begin{bmatrix}
  -1 & 1 & 2 \\
  0 & 2 & 6
 \end{bmatrix}
-\sim 
+\sim
 \begin{bmatrix}
  -1 & 0 & -1 \\
  3 & -1 & 0 \\
  -1 & 1 & 2 \\
  0 & 2 & 6
 \end{bmatrix}
-\sim 
+\sim
 \begin{bmatrix}
  1 & 0 & 1 \\
  3 & -1 & 0 \\
@@ -46,8 +46,8 @@ $$\begin{bmatrix}
 \begin{bmatrix}
  1 & 0 & 1 \\
  0 & 1 & 3 \\
- 0 & 0 & 0 \\ 
-0 & 0 & 0 
+ 0 & 0 & 0 \\
+0 & 0 & 0
 \end{bmatrix}$$
 \end{solution}
 
@@ -60,28 +60,28 @@ $$\begin{bmatrix}-3 & 5 & 2 & 0 \\ 1 & -1 & 0 & 2 \\ 1 & -2 & -1 & -1 \end{bmatr
 \begin{bmatrix}
 -3 & 5 & 2 & 0 \\
  1 & -1 & 0 & 2 \\
- 1 & -2 & -1 & -1 
+ 1 & -2 & -1 & -1
 \end{bmatrix} &\sim
 \begin{bmatrix}
  1 & -1 & 0 & 2 \\
 -3 & 5 & 2 & 0 \\
- 1 & -2 & -1 & -1 
+ 1 & -2 & -1 & -1
 \end{bmatrix} \sim
 \begin{bmatrix}
  1 & -1 & 0 & 2 \\
  0 & 2 & 2 & 6 \\
- 0 & -1 & -1 & -3 
+ 0 & -1 & -1 & -3
 \end{bmatrix} \sim
 \begin{bmatrix}
  1 & -1 & 0 & 2 \\
  0 & 1 & 1 & 3 \\
- 0 & -1 & -1 & -3 
+ 0 & -1 & -1 & -3
 \end{bmatrix} \\ &\sim
 \begin{bmatrix}
  1 & 0 & 1 & 5 \\
  0 & 1 & 1 & 3 \\
- 0 & 0 & 0 & 0 
-\end{bmatrix} 
+ 0 & 0 & 0 & 0
+\end{bmatrix}
 \end{align*}
 \end{solution}
 
@@ -90,30 +90,30 @@ Put the following matrix in reduced row echelon form.
 $$\begin{bmatrix}[ccc|c] -3 & 1 & 0 & 2 \\ -8 & 2 & -1 & 6 \\ 0 & 2 & 3 & -2 \end{bmatrix}$$
 \end{problem}
 \begin{solution}
-$$\begin{bmatrix}[ccc|c] 
+$$\begin{bmatrix}[ccc|c]
 -3 & 1 & 0 & 2 \\
  -8 & 2 & -1 & 6 \\
- 0 & 2 & 3 & -2 
+ 0 & 2 & 3 & -2
 \end{bmatrix} \sim
-\begin{bmatrix}[ccc|c] 
+\begin{bmatrix}[ccc|c]
 1 & -\frac{1}{3} & 0 & -\frac{2}{3} \\
  -8 & 2 & -1 & 6 \\
- 0 & 2 & 3 & -2 
+ 0 & 2 & 3 & -2
 \end{bmatrix} \sim
-\begin{bmatrix}[ccc|c] 
+\begin{bmatrix}[ccc|c]
 1 & -\frac{1}{3} & 0 & -\frac{2}{3} \\
  0 & -\frac{2}{3} & -1 & \frac{2}{3} \\
- 0 & 2 & 3 & -2 
+ 0 & 2 & 3 & -2
 \end{bmatrix} \sim
-\begin{bmatrix}[ccc|c] 
+\begin{bmatrix}[ccc|c]
 1 & -\frac{1}{3} & 0 & -\frac{2}{3} \\
  0 & 1 & \frac{3}{2} & -1 \\
- 0 & 2 & 3 & -2 
+ 0 & 2 & 3 & -2
 \end{bmatrix} \sim
-\begin{bmatrix}[ccc|c] 
+\begin{bmatrix}[ccc|c]
 1 & 0 & \frac{1}{2} & -1 \\
  0 & 1 & \frac{3}{2} & -1 \\
- 0 & 0 & 0 & 0 
+ 0 & 0 & 0 & 0
 \end{bmatrix}$$
 \end{solution}
 
@@ -125,17 +125,17 @@ $$\begin{bmatrix}[cccc|c] 2 & 1 & -1 & 0 & 5 \\ 3 & -1 & 0 & -2 & 0 \\ -1 & 0 & 
 $$\begin{bmatrix}[cccc|c]
  2 & 1 & -1 & 0 & 5 \\
  3 & -1 & 0 & -2 & 0 \\
- -1 & 0 & 5 & 0 & -1 
+ -1 & 0 & 5 & 0 & -1
 \end{bmatrix} \sim
 \begin{bmatrix}[cccc|c]
  -1 & 0 & 5 & 0 & -1  \\
  2 & 1 & -1 & 0 & 5 \\
- 3 & -1 & 0 & -2 & 0 
+ 3 & -1 & 0 & -2 & 0
 \end{bmatrix} \sim
 \begin{bmatrix}[cccc|c]
  1 & 0 & -5 & 0 & 1 \\
  2 & 1 & -1 & 0 & 5 \\
- 3 & -1 & 0 & -2 & 0 
+ 3 & -1 & 0 & -2 & 0
 \end{bmatrix} \sim
 \begin{bmatrix}[cccc|c]
  1 & 0 & -5 & 0 & 1  \\
@@ -152,9 +152,97 @@ $$\begin{bmatrix}[cccc|c]
  0 & 1 & 9 & 0 & 3 \\
  0 & 0 & 1 & -\frac{1}{12} & 0 \\
 \end{bmatrix} \sim
-\begin{bmatrix}[cccc|c] 
+\begin{bmatrix}[cccc|c]
 1 & 0 & 0 & -\frac{5}{12} & 1 \\
- 0 & 1 & 0 & \frac{3}{4} & 3 \\ 
- 0 & 0 & 1 & -\frac{1}{12} & 0 
+ 0 & 1 & 0 & \frac{3}{4} & 3 \\
+ 0 & 0 & 1 & -\frac{1}{12} & 0
 \end{bmatrix}$$
+\end{solution}
+
+\begin{problem}{E2}
+Find \(\RREF A\), where
+\[
+  A =
+  \begin{bmatrix}[cccc|c]
+    3 & -2 & 1 & 8 & -5 \\
+    2 & 2 & 0 & 6 & -2 \\
+    -1 & 1 & 1 & -4 & 6 \\
+  \end{bmatrix}
+\]
+\end{problem}
+\begin{solution}
+\[
+  \RREF A =
+  \begin{bmatrix}[cccc|c]
+    1 & 0 & 0 & 3 & -2 \\
+    0 & 1 & 0 & 0 & 1 \\
+    0 & 0 & 1 & -1 & 3
+  \end{bmatrix}
+\]
+\end{solution}
+
+\begin{problem}{E2}
+Find \(\RREF A\), where
+\[
+  A =
+  \begin{bmatrix}[cc|c]
+    2 & -7 & 4 \\
+    1 & -3 & 2 \\
+    3 & 0 & 3
+  \end{bmatrix}
+\]
+\end{problem}
+\begin{solution}
+\[
+  \RREF A =
+  \begin{bmatrix}[cc|c]
+    1 & 0 & 0 \\
+    0 & 1 & 0 \\
+    0 & 0 & 1
+  \end{bmatrix}
+\]
+\end{solution}
+
+\begin{problem}{E2}
+Find \(\RREF A\), where
+\[
+  A =
+  \begin{bmatrix}[ccc|c]
+    2 & -1 & 5 & 4 \\
+    -1 & 0 & -2 & -1 \\
+    1 & 3 & -1 & -5
+  \end{bmatrix}
+\]
+\end{problem}
+\begin{solution}
+\[
+  \RREF A =
+  \begin{bmatrix}[ccc|c]
+    1 & 0 & 2 & 1 \\
+    0 & 1 & -1 & -2 \\
+    0 & 0 & 0 & 0
+  \end{bmatrix}
+\]
+\end{solution}
+
+\begin{problem}{E2}
+Find \(\RREF A\), where
+\[
+  A =
+  \begin{bmatrix}[cccc|c]
+    2 & 2 & 1 & 2 & -1 \\
+    1 & 1 & 2 & 4 & 5 \\
+    3 & 3 & -1 & -2 & 1
+  \end{bmatrix}
+\]
+\end{problem}
+\begin{solution}
+\[
+  \RREF A =
+  \begin{bmatrix}[cccc|c]
+    1 & 1 & 0 & 0 & 0 \\
+    0 & 0 & 1 & 2 & 0 \\
+    0 & 0 & 0 & 0 & 1
+  \end{bmatrix}
+\]
 \end{solution}
