--- a/assessments/problems/E3.tex
+++ b/assessments/problems/E3.tex
@@ -7,7 +7,7 @@ x+3y-4z &= 5 \\
 \end{problem}
 \begin{solution}
 $$\RREF \left(\begin{bmatrix}[ccc|c] 1 & 3 & -4 & 5 \\ 3 & 9 & 1 & 2 \end{bmatrix} \right) = \begin{bmatrix}[ccc|c] 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & -1\end{bmatrix}$$
-So the solution set is 
+So the solution set is
 $$\left\{ \begin{bmatrix} 1-3c \\ c \\ -1 \end{bmatrix} \bigg|\ c \in \IR \right\}$$
 \end{solution}
 
@@ -29,7 +29,7 @@ $$\RREF\left(\begin{bmatrix}[ccc|c] -3 & 1 & 0 & 2 \\ -8 & 2 & -1 & 6 \\ 0 & 2 &
 The solutions are $$\left\{ \begin{bmatrix} -1-\frac{c}{2} \\ -1-\frac{3c}{2} \\ c \end{bmatrix}\ \bigg|\ c\in \IR\right\} = \left\{ \begin{bmatrix} c-1 \\ 3c-1 \\ -2c  \end{bmatrix}\ \bigg|\ c\in \IR\right\}$$
 \end{solution}
 
-\begin{problem}{E3} 
+\begin{problem}{E3}
 Solve the system of linear equations.
 \begin{align*}
 2x+y-z+w &=5 \\
@@ -42,7 +42,7 @@ $$\RREF\left( \begin{bmatrix}[cccc|c] 2 & 1 & -1 & 0 & 5 \\ 3 & -1 & 0 & -2 & 0 
 So the solutions are $$\left\{ \begin{bmatrix} 1+a \\ 3-21a \\ -7a \\ 12a \end{bmatrix}\ \big|\ a \in \IR\right\}$$
 \end{solution}
 
-\begin{problem}{E3} 
+\begin{problem}{E3}
 Solve the system of linear equations.
 \begin{align*}
 2x+y-z+w &=5 \\
@@ -53,4 +53,118 @@ Solve the system of linear equations.
 \begin{solution}
 $$\RREF\left( \begin{bmatrix}[cccc|c] 2 & 1 & -1 & 0 & 5 \\ 3 & -1 & 0 & -2 & 0 \\ -1 & 0 & 5 & 0 & -1 \end{bmatrix} \right) = \begin{bmatrix}[cccc|c] 1 & 0 & 0 & -\frac{1}{12} & 1 \\ 0 & 1 & 0 & \frac{7}{4} & 3 \\ 0 & 0 & 1 & \frac{7}{12} & 0 \end{bmatrix}$$
 So the solutions are $$\left\{ \begin{bmatrix} 1+a \\ 3-21a \\ -7a \\ 12a \end{bmatrix}\ \big|\ a \in \IR\right\}$$
+\end{solution}
+
+\begin{problem}{E3}
+Find the solution set for the following system of linear equations.
+\begin{align*}
+2x_1-2x_2+6x_3-x_4 &=-1 \\
+3x_1+6x_3+x_4 &= 5 \\
+-4x_1+x_2-9x_3+2x_4&=-7
+\end{align*}
+\end{problem}
+\begin{solution}
+Let \(A =
+  \begin{bmatrix}[cccc|c]
+    2 & -2 & 6 & -1 & -1 \\
+    3 & 0 & 6 & 1 & 5 \\
+    -4 & 1 & -9 & 2 & -7
+  \end{bmatrix}
+\), so \(\RREF A =
+  \begin{bmatrix}[cccc|c]
+    1 & 0 & 2 & 0 & 2 \\
+    0 & 1 & -1 & 0 & 3 \\
+    0 & 0 & 0 & 1 & -1
+  \end{bmatrix}
+\). It follows that the solution set is given by \(
+  \begin{bmatrix}
+    2 - 2a \\
+    3 + a \\
+    a \\
+    -1
+  \end{bmatrix}
+\) for all real numbers \(a\).
+\end{solution}
+
+\begin{problem}{E3}
+Find the solution set for the following system of linear equations.
+\begin{align*}
+2x_1-2x_2+6x_3-x_4 &=-1 \\
+3x_1+6x_3+x_4 &= 5 \\
+-4x_1+x_2-9x_3+2x_4&=-7
+\end{align*}
+\end{problem}
+\begin{solution}
+Let \(A =
+  \begin{bmatrix}[cccc|c]
+    2 & -2 & 6 & -1 & -1 \\
+    3 & 0 & 6 & 1 & 5 \\
+    -4 & 1 & -9 & 2 & -7
+  \end{bmatrix}
+\), so \(\RREF A =
+  \begin{bmatrix}[cccc|c]
+    1 & 0 & 2 & 0 & 2 \\
+    0 & 1 & -1 & 0 & 3 \\
+    0 & 0 & 0 & 1 & -1
+  \end{bmatrix}
+\). It follows that the solution set is given by \(
+  \begin{bmatrix}
+    2 - 2a \\
+    3 + a \\
+    a \\
+    -1
+  \end{bmatrix}
+\) for all real numbers \(a\).
+\end{solution}
+
+\begin{problem}{E3}
+Solve the following linear system.
+\begin{align*}
+4x_1+4x_2+3x_3-6x_4 &= 5 \\
+-2x_3-4x_4 &= 3 \\
+2x_1+2x_2+x_3-4x_4 &= -1 \\
+\end{align*}
+\end{problem}
+\begin{solution}
+Let \(A =
+  \begin{bmatrix}[cccc|c]
+    4 & 4 & 3 & -6 & 5 \\
+    0 & 0 & -2 & -4 & 3 \\
+    2 & 2 & 1 & -4 & -1
+  \end{bmatrix}
+\), so \(\RREF A =
+  \begin{bmatrix}[cccc|c]
+    1 & 1 & 0 & -3 & 0 \\
+    0 & 0 & 1 & 2 & 0 \\
+    0 & 0 & 0 & 0 & 1
+  \end{bmatrix}
+\). It follows that the system is inconsistent with no solutions
+(since the bottom row implies the contradiction \(0=1\)).
+\end{solution}
+
+\begin{problem}{E3}
+Solve the following linear system.
+\begin{align*}
+3x+2y+z &= 7 \\
+x+y+z &= 1 \\
+-2x+3z &= -11
+\end{align*}
+\end{problem}
+\begin{solution}
+Let \(A =
+  \begin{bmatrix}[cccc|c]
+    3 & 2 & 1 & 7 \\
+    1 & 1 & 1 & 1 \\
+    -2 & 0 & 3 & 11
+  \end{bmatrix}
+\), so \(\RREF A =
+  \begin{bmatrix}[cccc|c]
+    1 & 0 & 0 & 4 \\
+    0 & 1 & 0 & -2 \\
+    0 & 0 & 1 & -1
+  \end{bmatrix}
+\). It follows that the system has exactly one solution:
+\(\begin{bmatrix}
+  4 & -2 & -1
+\end{bmatrix}\)
 \end{solution}
