fix conzero-nonzero typo

--- a/modules/1-E/day1.tex
+++ b/modules/1-E/day1.tex
@@ -343,7 +343,7 @@ in the system).
       \item Swap two rows.
       \item Swap two columns.
       \item Add a constant to every term in a row.
-      \item Multiply a row by a conzero constant.
+      \item Multiply a row by a nonzero constant.
       \item Add a constant multiple of one row to another row.
       \item Replace a column with zeros.
     \end{enumerate}
