--- a/modules/1-E/day2.tex
+++ b/modules/1-E/day2.tex
@@ -8,7 +8,7 @@
   augmented matrices:
   \begin{enumerate}
     \item Swap two rows.
-    \item Multiply a row by a conzero constant.
+    \item Multiply a row by a nonzero constant.
     \item Add a constant multiple of one row to another row.
   \end{enumerate}
   Whenever two matrices \(A,B\) are equivalent (so whenever we do any of
