Update RAT problem numbering to match IF-AT cards

--- a/modules/2-V/readiness.tex
+++ b/modules/2-V/readiness.tex
@@ -20,7 +20,7 @@ systems \standardList{E1,E2,E3}.
 
 
 \begin{readinessAssuranceTest}
-
+\setcounter{enumi}{10}
 \item Simplify the following vector expression.
   \[
   2
