--- a/modules/5-M/readiness.tex
+++ b/modules/5-M/readiness.tex
@@ -17,7 +17,7 @@
 
 
 \begin{readinessAssuranceTest}
-
+\setcounter{enumi}{40}
 \item Let $f(x) = x^2-2$ and $g(x)= x^2+1$.  Compute the composition function $(f \circ g)(x)$.
 \begin{readinessAssuranceTestChoices}
 \item $x^2-1$
