--- a/rat/2-v-rat.tex
+++ b/rat/2-v-rat.tex
@@ -2,7 +2,7 @@
 %% This is file, `2-v-rat.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/08/30,10:42
+%% Generated on :  2017/08/31,8:53
 %% From source  :  readiness.tex
 %% Using options:  active,generate=rat/2-V-RAT.tex,extract-env={readinessAssuranceTest}
 %% 
@@ -16,7 +16,7 @@
 \begin{document}
 
 \begin{readinessAssuranceTest}
-
+\setcounter{enumi}{10}
 \item Simplify the following vector expression.
   \[
   2
