--- a/rat/4-a-rat.tex
+++ b/rat/4-a-rat.tex
@@ -2,7 +2,7 @@
 %% This is file, `4-a-rat.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/08/30,10:42
+%% Generated on :  2017/08/31,8:53
 %% From source  :  readiness.tex
 %% Using options:  active,generate=rat/4-A-RAT.tex,extract-env={readinessAssuranceTest}
 %% 
@@ -16,7 +16,7 @@
 \begin{document}
 
 \begin{readinessAssuranceTest}
-
+\setcounter{enumi}{30}
 \item Which of the following is a solution to the system of linear equations
       \begin{align*}
       x+3y-z    &=   2 \\
