--- a/modules/3-S/readiness.tex
+++ b/modules/3-S/readiness.tex
@@ -17,7 +17,7 @@ systems \standardList{E1,E2,E3}.
 
 
 \begin{readinessAssuranceTest}
-
+\setcounter{enumi}{20}
 \item Simplify the following vector expression.
   \[
   4
