Align V RAT answer choices with IF-AT answer choices, addresses #7

--- a/rat/2-v-rat.tex
+++ b/rat/2-v-rat.tex
@@ -2,7 +2,7 @@
 %% This is file, `2-v-rat.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/08/31,8:53
+%% Generated on :  2017/08/31,15:20
 %% From source  :  readiness.tex
 %% Using options:  active,generate=rat/2-V-RAT.tex,extract-env={readinessAssuranceTest}
 %% 
@@ -17,6 +17,7 @@
 
 \begin{readinessAssuranceTest}
 \setcounter{enumi}{10}
+%Correct answer C
 \item Simplify the following vector expression.
   \[
   2
@@ -38,14 +39,14 @@
       \)
 \item \(
         \begin{bmatrix}
-          6 \\ -8 \\ -3
-        \end{bmatrix}
-      \) % correct
-\item \(
-        \begin{bmatrix}
           3 \\ 2 \\ -5
         \end{bmatrix}
       \)
+\item \(
+        \begin{bmatrix}
+          6 \\ -8 \\ -3
+        \end{bmatrix}
+      \) % correct
 \item \(
         \begin{bmatrix}
           -2 \\ 0 \\ 1
@@ -54,6 +55,7 @@
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+%Correct answer C
 \item Simplify the following vector expression.
   \[
   2\left(
@@ -69,11 +71,6 @@
 \begin{readinessAssuranceTestChoices}
 \item \(
         \begin{bmatrix}
-          0 \\ 4 \\ -8
-        \end{bmatrix}
-      \) % correct
-\item \(
-        \begin{bmatrix}
           6 \\ -8 \\ -3
         \end{bmatrix}
       \)
@@ -84,24 +81,31 @@
       \)
 \item \(
         \begin{bmatrix}
+          0 \\ 4 \\ -8
+        \end{bmatrix}
+      \) % correct
+\item \(
+        \begin{bmatrix}
           -2 \\ 0 \\ 1
         \end{bmatrix}
       \)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+%Correct answer A
 \item Simplify the complex number expression
       \(-4(3-2i)+2(5+i)\).
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \(3-7i\)
-\item \(4+i\)
 \item \(-2+10i\) % correct
 \item \(-1-5i\)
+\item \(3-7i\)
+\item \(4+i\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+%Correct answer C
 \item Which of these complex numbers might be represented
       by the following vector
       plotted on the complex plane (where the horizontal axis gives the
@@ -124,19 +128,21 @@
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+%Correct answer A
 \item Simplify \(3f(x)-2g(x)\) where
       \(f(x)=7-x^2\) and
       \(g(x)=2x^3+x-1\).
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \(x^3+4x-5\)
 \item \(-4x^3-3x^2-2x+23\) % correct
-\item \(3x^3+5x^2-3x+17\)
 \item \(-x^3+19x^2-4\)
+\item \(x^3+4x-5\)
+\item \(3x^3+5x^2-3x+17\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+%Correct answer C
 \item Express the following system of linear equations as an augmented matrix.
 \begin{alignat*}{5}
   x_1 &\,+\,& 2x_2 &\, \,&     &\,-\,&  x_4 &\,=\,& 3 \\
@@ -154,12 +160,6 @@
         -2 & 3
       \end{bmatrix}
     \)
-\item \(
-      \begin{bmatrix}[cccc|c]
-        1 & 2 & 0 & -1 & 3 \\
-        0 & 0 & 1 & 4 & -2
-      \end{bmatrix}
-    \) % correct
     \item \(
           \begin{bmatrix}[c|c]
             1 & 2 \\
@@ -171,6 +171,13 @@
         \)
 \item \(
       \begin{bmatrix}[cccc|c]
+        1 & 2 & 0 & -1 & 3 \\
+        0 & 0 & 1 & 4 & -2
+      \end{bmatrix}
+    \) % correct
+\vspace{0.15in}
+\item \(
+      \begin{bmatrix}[cccc|c]
         1 & 2 & 1 & 4 & 3 \\
         -2 & 1 & 3 & 4 & 5
       \end{bmatrix}
@@ -178,6 +185,7 @@
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+%Correct answer B
 \item Which of the following matrices is equivalent to the following matrix?
   \[
     \begin{bmatrix}[cc|c]
@@ -198,6 +206,14 @@
         0 & 0 & 1 \\
       \end{bmatrix}
     \)
+\item
+    \(
+      \begin{bmatrix}[cc|c]
+        1 & 2 & 3 \\
+        0 & 4 & -1 \\
+        0 & -1 & -4 \\
+      \end{bmatrix}
+    \) % correct
   \item
     \(
       \begin{bmatrix}[cc|c]
@@ -214,17 +230,11 @@
         2 & 3 & 2 \\
       \end{bmatrix}
     \)
-  \item
-    \(
-      \begin{bmatrix}[cc|c]
-        1 & 2 & 3 \\
-        0 & 4 & -1 \\
-        0 & -1 & -4 \\
-      \end{bmatrix}
-    \) % correct
+
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
+%Correct answer B
 \item Find
   \(\RREF
     \begin{bmatrix}[cc|c]
@@ -244,6 +254,14 @@
         0 & 0 & 0 \\
       \end{bmatrix}
     \)
+\item
+    \(
+      \begin{bmatrix}[cc|c]
+        1 & 0 & 0 \\
+        0 & 1 & 0 \\
+        0 & 0 & 1 \\
+      \end{bmatrix}
+    \) % correct
   \item
     \(
       \begin{bmatrix}[cc|c]
@@ -260,17 +278,11 @@
         0 & 0 & 0 \\
       \end{bmatrix}
     \)
-  \item
-    \(
-      \begin{bmatrix}[cc|c]
-        1 & 0 & 0 \\
-        0 & 1 & 0 \\
-        0 & 0 & 1 \\
-      \end{bmatrix}
-    \) % correct
+
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
+%Correct answer B
   \item Solve the following system of linear equations.
   \begin{alignat*}{4}
     2x_1 &\,+\,& x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
@@ -285,17 +297,17 @@
             x_1 \\ x_2 \\ x_3
           \end{bmatrix}=
           \begin{bmatrix}
-            2 \\ 0 \\ -1
+            1 \\ -6 \\ 1
           \end{bmatrix}
-        \) % correct
+        \)
   \item \(
           \begin{bmatrix}
             x_1 \\ x_2 \\ x_3
           \end{bmatrix}=
           \begin{bmatrix}
-            1 \\ -6 \\ 1
+            2 \\ 0 \\ -1
           \end{bmatrix}
-        \)
+        \) % correct
   \item \(
           \begin{bmatrix}
             x_1 \\ x_2 \\ x_3
@@ -312,6 +324,7 @@
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
+%Correct answer C
   \item Solve the following system of linear equations.
   \begin{alignat*}{4}
     2x_1 &\,+\,& x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
