--- a/modules/2-V/readiness.tex
+++ b/modules/2-V/readiness.tex
@@ -21,6 +21,7 @@ systems \standardList{E1,E2,E3}.
 
 \begin{readinessAssuranceTest}
 \setcounter{enumi}{10}
+%Correct answer C
 \item Simplify the following vector expression.
   \[
   2
@@ -42,14 +43,14 @@ systems \standardList{E1,E2,E3}.
       \)
 \item \(
         \begin{bmatrix}
-          6 \\ -8 \\ -3
-        \end{bmatrix}
-      \) % correct
-\item \(
-        \begin{bmatrix}
           3 \\ 2 \\ -5
         \end{bmatrix}
       \)
+\item \(
+        \begin{bmatrix}
+          6 \\ -8 \\ -3
+        \end{bmatrix}
+      \) % correct
 \item \(
         \begin{bmatrix}
           -2 \\ 0 \\ 1
@@ -58,6 +59,7 @@ systems \standardList{E1,E2,E3}.
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+%Correct answer C
 \item Simplify the following vector expression.
   \[
   2\left(
@@ -73,11 +75,6 @@ systems \standardList{E1,E2,E3}.
 \begin{readinessAssuranceTestChoices}
 \item \(
         \begin{bmatrix}
-          0 \\ 4 \\ -8
-        \end{bmatrix}
-      \) % correct
-\item \(
-        \begin{bmatrix}
           6 \\ -8 \\ -3
         \end{bmatrix}
       \)
@@ -88,24 +85,31 @@ systems \standardList{E1,E2,E3}.
       \)
 \item \(
         \begin{bmatrix}
+          0 \\ 4 \\ -8
+        \end{bmatrix}
+      \) % correct
+\item \(
+        \begin{bmatrix}
           -2 \\ 0 \\ 1
         \end{bmatrix}
       \)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+%Correct answer A
 \item Simplify the complex number expression
       \(-4(3-2i)+2(5+i)\).
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \(3-7i\)
-\item \(4+i\)
 \item \(-2+10i\) % correct
 \item \(-1-5i\)
+\item \(3-7i\)
+\item \(4+i\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+%Correct answer C
 \item Which of these complex numbers might be represented
       by the following vector
       plotted on the complex plane (where the horizontal axis gives the
@@ -128,19 +132,21 @@ systems \standardList{E1,E2,E3}.
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+%Correct answer A
 \item Simplify \(3f(x)-2g(x)\) where
       \(f(x)=7-x^2\) and
       \(g(x)=2x^3+x-1\).
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \(x^3+4x-5\)
 \item \(-4x^3-3x^2-2x+23\) % correct
-\item \(3x^3+5x^2-3x+17\)
 \item \(-x^3+19x^2-4\)
+\item \(x^3+4x-5\)
+\item \(3x^3+5x^2-3x+17\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+%Correct answer C
 \item Express the following system of linear equations as an augmented matrix.
 \begin{alignat*}{5}
   x_1 &\,+\,& 2x_2 &\, \,&     &\,-\,&  x_4 &\,=\,& 3 \\
@@ -158,12 +164,6 @@ systems \standardList{E1,E2,E3}.
         -2 & 3
       \end{bmatrix}
     \)
-\item \(
-      \begin{bmatrix}[cccc|c]
-        1 & 2 & 0 & -1 & 3 \\
-        0 & 0 & 1 & 4 & -2
-      \end{bmatrix}
-    \) % correct
     \item \(
           \begin{bmatrix}[c|c]
             1 & 2 \\
@@ -175,6 +175,13 @@ systems \standardList{E1,E2,E3}.
         \)
 \item \(
       \begin{bmatrix}[cccc|c]
+        1 & 2 & 0 & -1 & 3 \\
+        0 & 0 & 1 & 4 & -2
+      \end{bmatrix}
+    \) % correct
+	\vspace{0.15in}
+\item \(
+      \begin{bmatrix}[cccc|c]
         1 & 2 & 1 & 4 & 3 \\
         -2 & 1 & 3 & 4 & 5
       \end{bmatrix}
@@ -182,6 +189,7 @@ systems \standardList{E1,E2,E3}.
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+%Correct answer B
 \item Which of the following matrices is equivalent to the following matrix?
   \[
     \begin{bmatrix}[cc|c]
@@ -201,7 +209,15 @@ systems \standardList{E1,E2,E3}.
         0 & 4 & -1 \\
         0 & 0 & 1 \\
       \end{bmatrix}
-    \)
+    \)  
+	\item
+    \(
+      \begin{bmatrix}[cc|c]
+        1 & 2 & 3 \\
+        0 & 4 & -1 \\
+        0 & -1 & -4 \\
+      \end{bmatrix}
+    \) % correct
   \item
     \(
       \begin{bmatrix}[cc|c]
@@ -218,17 +234,11 @@ systems \standardList{E1,E2,E3}.
         2 & 3 & 2 \\
       \end{bmatrix}
     \)
-  \item
-    \(
-      \begin{bmatrix}[cc|c]
-        1 & 2 & 3 \\
-        0 & 4 & -1 \\
-        0 & -1 & -4 \\
-      \end{bmatrix}
-    \) % correct
+
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
+%Correct answer B
 \item Find
   \(\RREF
     \begin{bmatrix}[cc|c]
@@ -247,7 +257,15 @@ systems \standardList{E1,E2,E3}.
         0 & 1 & -1 \\
         0 & 0 & 0 \\
       \end{bmatrix}
-    \)
+    \)  
+	\item
+    \(
+      \begin{bmatrix}[cc|c]
+        1 & 0 & 0 \\
+        0 & 1 & 0 \\
+        0 & 0 & 1 \\
+      \end{bmatrix}
+    \) % correct
   \item
     \(
       \begin{bmatrix}[cc|c]
@@ -264,17 +282,11 @@ systems \standardList{E1,E2,E3}.
         0 & 0 & 0 \\
       \end{bmatrix}
     \)
-  \item
-    \(
-      \begin{bmatrix}[cc|c]
-        1 & 0 & 0 \\
-        0 & 1 & 0 \\
-        0 & 0 & 1 \\
-      \end{bmatrix}
-    \) % correct
+
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
+%Correct answer B
   \item Solve the following system of linear equations.
   \begin{alignat*}{4}
     2x_1 &\,+\,& x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
@@ -289,17 +301,17 @@ systems \standardList{E1,E2,E3}.
             x_1 \\ x_2 \\ x_3
           \end{bmatrix}=
           \begin{bmatrix}
-            2 \\ 0 \\ -1
+            1 \\ -6 \\ 1
           \end{bmatrix}
-        \) % correct
+        \)  
   \item \(
           \begin{bmatrix}
             x_1 \\ x_2 \\ x_3
           \end{bmatrix}=
           \begin{bmatrix}
-            1 \\ -6 \\ 1
+            2 \\ 0 \\ -1
           \end{bmatrix}
-        \)
+        \) % correct
   \item \(
           \begin{bmatrix}
             x_1 \\ x_2 \\ x_3
@@ -316,6 +328,7 @@ systems \standardList{E1,E2,E3}.
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
+%Correct answer C
   \item Solve the following system of linear equations.
   \begin{alignat*}{4}
     2x_1 &\,+\,& x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
