--- a/modules/2-V/readiness.tex
+++ b/modules/2-V/readiness.tex
@@ -21,7 +21,7 @@ systems \standardList{E1,E2,E3}.
 
 \begin{readinessAssuranceTest}
 
-\item Simplify the following vector expression.
+\item Simplify the following Euclidean vector expression.
   \[
   2
   \begin{bmatrix}
@@ -42,14 +42,14 @@ systems \standardList{E1,E2,E3}.
       \)
 \item \(
         \begin{bmatrix}
-          6 \\ -8 \\ -3
-        \end{bmatrix}
-      \) % correct
-\item \(
-        \begin{bmatrix}
           3 \\ 2 \\ -5
         \end{bmatrix}
       \)
+\item \(
+        \begin{bmatrix}
+          6 \\ -8 \\ -3
+        \end{bmatrix}
+      \) % correct
 \item \(
         \begin{bmatrix}
           -2 \\ 0 \\ 1
@@ -58,7 +58,7 @@ systems \standardList{E1,E2,E3}.
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
-\item Simplify the following vector expression.
+\item Simplify the following Euclidean vector expression.
   \[
   2\left(
   \begin{bmatrix}
@@ -73,11 +73,6 @@ systems \standardList{E1,E2,E3}.
 \begin{readinessAssuranceTestChoices}
 \item \(
         \begin{bmatrix}
-          0 \\ 4 \\ -8
-        \end{bmatrix}
-      \) % correct
-\item \(
-        \begin{bmatrix}
           6 \\ -8 \\ -3
         \end{bmatrix}
       \)
@@ -86,6 +81,11 @@ systems \standardList{E1,E2,E3}.
           3 \\ 2 \\ -5
         \end{bmatrix}
       \)
+\item \(
+        \begin{bmatrix}
+          0 \\ 4 \\ -8
+        \end{bmatrix}
+      \) % correct
 \item \(
         \begin{bmatrix}
           -2 \\ 0 \\ 1
@@ -99,15 +99,15 @@ systems \standardList{E1,E2,E3}.
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
+\item \(-2+10i\) % correct
 \item \(3-7i\)
 \item \(4+i\)
-\item \(-2+10i\) % correct
 \item \(-1-5i\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
 \item Which of these complex numbers might be represented
-      by the following vector
+      by the following Euclidean vector
       plotted on the complex plane (where the horizontal axis gives the
       real part and the vertical axis gives the imaginary part)?
 
@@ -134,20 +134,20 @@ systems \standardList{E1,E2,E3}.
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \(x^3+4x-5\)
 \item \(-4x^3-3x^2-2x+23\) % correct
+\item \(x^3+4x-5\)
 \item \(3x^3+5x^2-3x+17\)
 \item \(-x^3+19x^2-4\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
 \item Express the following system of linear equations as an augmented matrix.
-\begin{alignat*}{5}
-  x_1 &\,+\,& 2x_2 &\, \,&     &\,-\,&  x_4 &\,=\,& 3 \\
-      &\, \,&      &\, \,& x_3 &\,+\,& 4x_4 &\,=\,& -2
-\end{alignat*}
+\begin{align*}
+  x_1 + 2x_2      -  x_4 &= 3 \\
+             x_3 + 4x_4 &= -2
+\end{align*}
 
-\begin{multicols}{4}
+\begin{multicols}{3}
 \begin{readinessAssuranceTestChoices}
 \item \(
       \begin{bmatrix}[c|c]
@@ -159,20 +159,20 @@ systems \standardList{E1,E2,E3}.
       \end{bmatrix}
     \)
 \item \(
+      \begin{bmatrix}[c|c]
+        1 & 2 \\
+        0 & -1 \\
+        3 & 0 \\
+        0 & 1 \\
+        4 & -2
+      \end{bmatrix}
+    \)
+\item \(
       \begin{bmatrix}[cccc|c]
         1 & 2 & 0 & -1 & 3 \\
         0 & 0 & 1 & 4 & -2
       \end{bmatrix}
     \) % correct
-    \item \(
-          \begin{bmatrix}[c|c]
-            1 & 2 \\
-            0 & -1 \\
-            3 & 0 \\
-            0 & 1 \\
-            4 & -2
-          \end{bmatrix}
-        \)
 \item \(
       \begin{bmatrix}[cccc|c]
         1 & 2 & 1 & 4 & 3 \\
@@ -184,10 +184,10 @@ systems \standardList{E1,E2,E3}.
 
 \item Which of the following matrices is equivalent to the following matrix?
   \[
-    \begin{bmatrix}[cc|c]
-      1 & 2 & 3 \\
-      0 & 4 & -1 \\
-      2 & 3 & 2 \\
+    \begin{bmatrix}[ccc|c]
+      1 & 2 & 3 & -1 \\
+      0 & 4 & -1 & 2 \\
+      2 & 3 & 2 & 3 \\
     \end{bmatrix}
   \]
   (Hint: The correct answer was obtained from a single row operation.)
@@ -196,36 +196,36 @@ systems \standardList{E1,E2,E3}.
   \begin{readinessAssuranceTestChoices}
   \item
     \(
-      \begin{bmatrix}[cc|c]
-        1 & 2 & 3 \\
-        0 & 4 & -1 \\
-        0 & 0 & 1 \\
+      \begin{bmatrix}[ccc|c]
+        1 & 2 & 3 & -1 \\
+        0 & 4 & -1 & 2 \\
+        0 & 0 & 1 & 7\\
       \end{bmatrix}
     \)
   \item
     \(
-      \begin{bmatrix}[cc|c]
-        1 & 2 & 3 \\
-        1 & 3 & 4 \\
-        2 & 3 & 2 \\
-      \end{bmatrix}
-    \)
-  \item
-    \(
-      \begin{bmatrix}[cc|c]
-        1 & 2 & 3 \\
-        0 & 1 & 1 \\
-        2 & 3 & 2 \\
-      \end{bmatrix}
-    \)
-  \item
-    \(
-      \begin{bmatrix}[cc|c]
-        1 & 2 & 3 \\
-        0 & 4 & -1 \\
-        0 & -1 & -4 \\
+      \begin{bmatrix}[ccc|c]
+        1 & 2 & 3 & -1 \\
+        0 & 4 & -1 & 2 \\
+        0 & -1 & -4 & 5 \\
       \end{bmatrix}
     \) % correct
+  \item
+    \(
+      \begin{bmatrix}[ccc|c]
+        1 & 2 & 3 & -1 \\
+        1 & 3 & 4 & 3 \\
+        2 & 3 & 2 & 3\\
+      \end{bmatrix}
+    \)
+  \item
+    \(
+      \begin{bmatrix}[ccc|c]
+        1 & 2 & 3 & -1 \\
+        0 & 1 & 1 & 4 \\
+        2 & 3 & 2 & 3 \\
+      \end{bmatrix}
+    \)
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
@@ -251,6 +251,14 @@ systems \standardList{E1,E2,E3}.
   \item
     \(
       \begin{bmatrix}[cc|c]
+        1 & 0 & 0 \\
+        0 & 1 & 0 \\
+        0 & 0 & 1 \\
+      \end{bmatrix}
+    \) % correct
+  \item
+    \(
+      \begin{bmatrix}[cc|c]
         1 & 2 & 3 \\
         1 & 3 & 4 \\
         0 & 0 & 0 \\
@@ -264,14 +272,6 @@ systems \standardList{E1,E2,E3}.
         0 & 0 & 0 \\
       \end{bmatrix}
     \)
-  \item
-    \(
-      \begin{bmatrix}[cc|c]
-        1 & 0 & 0 \\
-        0 & 1 & 0 \\
-        0 & 0 & 1 \\
-      \end{bmatrix}
-    \) % correct
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
@@ -289,17 +289,17 @@ systems \standardList{E1,E2,E3}.
             x_1 \\ x_2 \\ x_3
           \end{bmatrix}=
           \begin{bmatrix}
-            2 \\ 0 \\ -1
+            1 \\ -6 \\ 1
           \end{bmatrix}
-        \) % correct
+        \)
   \item \(
           \begin{bmatrix}
             x_1 \\ x_2 \\ x_3
           \end{bmatrix}=
           \begin{bmatrix}
-            1 \\ -6 \\ 1
+            2 \\ 0 \\ -1
           \end{bmatrix}
-        \)
+        \) % correct
   \item \(
           \begin{bmatrix}
             x_1 \\ x_2 \\ x_3
