--- a/modules/3-S/readiness.tex
+++ b/modules/3-S/readiness.tex
@@ -18,7 +18,7 @@ systems \standardList{E1,E2,E3}.
 
 \begin{readinessAssuranceTest}
 
-\item Simplify the following vector expression.
+\item Simplify the following Euclidean vector expression.
   \[
   4
   \begin{bmatrix}
