update clontz reassessment form to request quiz AND version explicitly

--- a/reassessment-form-clontz.tex
+++ b/reassessment-form-clontz.tex
@@ -34,7 +34,8 @@
 \vspace{0.15in}
 {\bf Standard: } \underline{\phantom{xxxxxxxxxxxxxxxxxxx}} \\
 \vspace{0.15in}
-{\bf Assessment marked with \reattemptMark{}: } \underline{\phantom{xxxxxxxxxxxxxxxxxxxxxxxxxxxxx}} \\
+{\bf Quiz/Exam marked with \reattemptMark{}: } \underline{\phantom{xxxxxxxxxx}}
+{\bf Version: } \underline{\phantom{xxxxxx}} \\
 \vspace{0.15in}
 {\bf List of practice problems worked: } \\
 \vspace{0.4in}
@@ -70,7 +71,8 @@ to office hours to be given an opportunity to work a new problem.
 \vspace{0.15in}
 {\bf Standard: } \underline{\phantom{xxxxxxxxxxxxxxxxxxx}} \\
 \vspace{0.15in}
-{\bf Assessment marked with \minorMark{} (include version): } \underline{\phantom{xxxxxxxxxxxxxxxxxxxxxxxxxxxxx}} \\
+{\bf Quiz/Exam marked with \minorMark{}: } \underline{\phantom{xxxxxxxxxx}}
+{\bf Version: } \underline{\phantom{xxxxxx}} \\
 \vspace{0.15in}
 Use this space to completely rework the problem. (This form is due the next
 class day following when the marked assessment was returned.)
